[tool.poetry]
name = "bloodymary"
version = "0.3.0"
description = "Utility for parsing and processing blood pressure measurements"
authors = ["Ilkka Tuohela <hile@iki.fi>"]
license = "PSF"

[tool.poetry.dependencies]
python = "^3.9"
cli-toolkit = "^2.1.5"
pandas = "^1.4.3"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]
coverage = "^6.1"
flake8 = "^5.0"
flake8-bugbear = "^22"
flake8-quotes = "^3.3"
pycodestyle = "^2.8"
pyflakes = "^2.4"
pylint = "^2"
pytest = "^7.1"
tox = "^3"

[tool.poetry.scripts]
bloodymary = "bloodymary.bin.bloodymary:main"

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
