[tool.poetry]
name = "bloodymary"
version = "0.3.0"
description = "Utility for parsing and processing blood pressure measurements"
authors = ["Ilkka Tuohela <hile@iki.fi>"]
readme = "README.md"
include = [
    "LICENSE",
]
license = "BSD"
classifiers = [
    "Environment :: Console",
    "License :: OSI Approved :: BSD License",
    "Operating System :: MacOS",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.9"
cli-toolkit = "^2"
pandas = "^1.4"
matplotlib = "^3.5"

[tool.poetry.group.dev.dependencies]
coverage = "^7"
flake8 = "^6"
flake8-bugbear = "^22"
flake8-quotes = "^3"
pycodestyle = "^2"
pyflakes = "^3"
pylint = "^2"
pytest = "^7"
tox = "^4"

[tool.poetry.scripts]
bloodymary = "bloodymary.bin.bloodymary:main"

[build-system]
requires = ["poetry-core>=1.3.2"]
build-backend = "poetry.core.masonry.api"
